[package]
name = "zen"
version = "0.2.6"
edition = "2024"
authors = ["rootCircle <dev.frolics@gmail.com>"]
repository = "https://github.com/zenlang-rs/zen-lang"
categories = ["development-tools", "command-line-utilities", "compilers"]
keywords = ["zenlang", "bollywood", "language", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
lazy_static = "1.4.0"
nom = "^7.1.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.
